# tmu-xacle2026

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: model.yaml  stage2_clap_pretrain.yaml  stage3_xacle.yaml
scripts/: inference.py  train.py
src/tmu_xacle/: __init__.py
src/tmu_xacle/data/: __init__.py  clap_dataset.py  xacle_dataset.py
src/tmu_xacle/evaluation/: __init__.py  metrics.py
src/tmu_xacle/model/: __init__.py  beats_encoder.py  llm_wrapper.py  score_head.py  sequence_strategy.py  swiglu_mlp.py  xacle_model.py
src/tmu_xacle/training/: __init__.py  listnet_loss.py  trainer.py
src/tmu_xacle/utils/: __init__.py  score_normalizer.py
