[project]
name = "tmu-xacle"
version = "1.0.0"
description = "TMU System for XACLE Challenge - Audio-Text Alignment Score Prediction"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core ML frameworks
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "pytorch-lightning>=2.5.5",
    "transformers>=4.56.0",
    # Data Processing
    "librosa==0.9.2",
    "soundfile>=0.13.1",
    "soxr>=0.3.0",
    "pandas==1.4.1",
    "numpy==1.23.5",
    # Metrics & Evaluation
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    # Visualization & Logging
    "tensorboard>=2.20.0",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    # Model-specific
    "peft>=0.8.0",
    "einops>=0.8.1",
    "timm>=1.0.16",
    "speechbrain>=1.0.3",
    "llvmlite>=0.45.1",
    # Utilities
    "pyyaml>=6.0",
    "huggingface-hub>=0.20.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/shiotalab-tmu/tmu-xacle2026"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tmu_xacle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
